# agent

./: README.md  car_manual_rag-2026-07-04_102623-dump.sql  dump.rdb
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  chat.py  conversations.py  health.py  rag.py  router.py  users.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/crud/: conversation.py  llm_call.py  message.py  rag_query_log.py  user.py
backend/app/db/: init_db.py  redis.py  session.py
backend/app/models/: __init__.py  conversation.py  conversation_memory.py  llm_call.py  manual_chunk.py  manual_document.py  message.py  rag_query_log.py  user.py
backend/app/rag/: __init__.py  importer.py  prompt_builder.py  retrieval_explanation.md  retriever.py  retriever_types.py  sparse_index.py  utils.py  vector_store.py
backend/app/schemas/: auth.py  chat.py  conversation.py  message.py  rag.py  response.py  user.py
backend/app/scripts/: __init__.py  build_embeddings.py  evaluate_rag.py  import_chunks.py
backend/app/services/: auth_service.py  chat_service.py  conversation_memory_service.py  conversation_service.py  embedding_service.py  llm_service.py  query_rewrite_service.py  sse.py
data_clean/: chunks.jsonl  clean_1.py  clean_2.py  clean_3.py  cleaned_1.json  cleaned_2.json  data_cleaning_review.md  eval.jsonl  eval.md  image_manifest.json  merge.py  清洗流程说明.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
(+22 files in other folders)
