[project]
name = "car-manual-rag-backend"
version = "0.1.0"
description = "FastAPI backend for the car manual RAG system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncmy>=0.2.10",
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "loguru>=0.7.2",
    "openai>=1.90.0",
    "pyjwt>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "redis>=5.2.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
